tree-sitter-xdy/test/corpus/constants.txt
============
Constant: 0
============

0

---

(function (constant))

============
Constant: 1
============

1

---

(function (constant))

=============
Constant: -1
=============

-1

---

(function (neg (constant)))

=============
Constant: 10
=============

10

---

(function (constant))

==============
Constant: 100
==============

100

---

(function (constant))

===============================================
Constant: 2147483647
===============================================

2147483647

---

(function (constant))

===============================================
Constant: 2147483648
===============================================

2147483648

---

(function (constant))

===============================================
Constant: 123456789123456789123456789123456789
===============================================

123456789123456789123456789123456789

---

(function (constant))

===============================================
Constant: 987654321987654321987654321987654321
===============================================

987654321987654321987654321987654321

---

(function (constant))

==============
Leading 0: 09
==============

09

---

(function (constant))

==============
Constant: (0)
==============

(0)

---

(function (group (constant)))
