tree-sitter-xdy/test/corpus/variables.txt
==================
External: a
==================

{a}

---

(function (variable (identifier)))

==================
External: alloy
==================

{alloy}

---

(function (variable (identifier)))

==================
External: a0
==================

{a0}

---

(function (variable (identifier)))

=====================
External: kebab-case
=====================

{kebab-case}

---

(function (variable (identifier)))

=====================
External: snake_case
=====================

{snake_case}

---

(function (variable (identifier)))

===========================
External: qualified.access
===========================

{qualified.access}

---

(function (variable (identifier)))

==================
External: dés
==================

{dés}

---

(function (variable (identifier)))

===============================
External: an external variable
===============================

{an external variable}

---

(function (variable (identifier)))

===============================
External: выражение в кости
===============================

{выражение в кости}

---

(function (variable (identifier)))

===============================
External: έκφραση ζαριών
===============================

{έκφραση ζαριών}

---

(function (variable (identifier)))

==================
Parameter: a
==================

a: {a}

---

(function
	(parameters (parameter (identifier)))
	(variable (identifier)))

===================================
Parameter: a, an external variable
===================================

a, an external variable: {an external variable}

---

(function
	(parameters (parameter (identifier)) (parameter (identifier)))
	(variable (identifier)))

==================
External: (a)
==================

({a})

---

(function (group (variable (identifier))))

===================
Bare identifier: a
:error
===================

---

==================
External: $env start
==================

{$env}

---

(function (variable (identifier)))

==================
External: #tag start
==================

{#tag}

---

(function (variable (identifier)))

==================
External: 'quote start
==================

{'quoted}

---

(function (variable (identifier)))

============================
External: pipe selector
============================

{env|selector}

---

(function (variable (identifier)))

==================
External: predicate ?
==================

{ready?}

---

(function (variable (identifier)))

==================
External: bang !
==================

{bang!}

---

(function (variable (identifier)))

==================
External: tilde ~
==================

{approx~}

---

(function (variable (identifier)))

==================
External: interior $ #
==================

{price$per#unit}

---

(function (variable (identifier)))

===================================
External: selector on env variable
===================================

$env|weapon: {$env|weapon}

---

(function
	(parameters (parameter (identifier)))
	(variable (identifier)))

===============================
External: Nl letter (Alphabetic)
===============================

{Ⅻ}

---

(function (variable (identifier)))
